# touchgdoc

./: .gitignore  .travis.yml  Pipfile  README.md  main.py  requirements.txt  setup.cfg  setup.py
docs/: index.html
docs/js/: index.js
mkgdoc/: app_setup.py  module.py
package/: app_setup.py  module.py
tests/: conftest.py  custom_fakers.py
tests/package/: app_setup_tests.py
tests/package/sub_package/: module_tests.py
tests/touchgdoc/: toucggdoc_tests.py  touchgdoc_tests.py
touchgdoc/: __init__.py  cli.py  config.yml  touchgdoc.py
