; Application configs
[touchgdoc]
timezone = America/New_York

; Setup Configs
[metadata]
name = touchgdoc
version = 0.0.1
author = Jon Stroop
author-email = jpstroop@gmail.com
home-page = https://github.com/jpstroop/touchgdoc
description = Command line application for quickly creating documents in Google Drive.

[options]
zip_safe = False
include_package_data = True
package_dir =
    = touchgdoc
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools
install_requires =
  cached-property>=1.5.1
  click>=7.0
package_data =
  touchgdoc = [config.yml]

[options.packages.find]
where = touchgdoc

[options.entry_points]
console_scripts =
    tgd = touchgdoc.cli:touchgdoc

; Test configs
; pipenv run  py.test -h to see options
; More: https://docs.pytest.org/en/3.4.2/customize.html#adding-default-options
[tool:pytest]
addopts =
  --cache-clear
  -ra
  --cov-report term-missing:skip-covered
  --cov-report html:cov_html
  --cov=touchgdoc
  tests/
cache_dir = /tmp/pytest_cache
python_files = *_tests.py
python_classes = *Tests
testpaths = tests
console_output_style = count

; Options for coverage.py test coverage
; See: http://coverage.readthedocs.io/en/latest/source.html#source
; and:  http://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = True
source = touchgdoc

; Regexes for lines to exclude from consideration
; See http://coverage.readthedocs.io/en/latest/excluding.html#excluding
[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

ignore_errors = True
